AS-28, AS-29, AS-17, AS-16: Unit tests